# AS-testFFmpeg

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/test/aplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/test/aplay/: MainActivity.java  XPlay.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/test/aplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
